refactor: simplify auth role checks, update NFC device management, and add payroll calculation and NFC card assignment features